// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots atoms|Heading header 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c1:first-child {
  margin-top: 0;
}

.c1:last-child {
  margin-bottom: 0;
}

.c1,
input.c1 {
  font-size: 1.5em;
}

.c1 .c2 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

<div
  className="c0"
>
  <h1
    className="c1"
    type="header"
  >
    Molestiae illum dolorem expedita.
  </h1>
</div>
`;

exports[`Storyshots atoms|Heading icon 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
}

.c4 .c2 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c5 .c2 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c1:first-child {
  margin-top: 0;
}

.c1:last-child {
  margin-bottom: 0;
}

.c1,
input.c1 {
  font-size: 0.8125em;
  text-transform: uppercase;
  color: #999;
  display: table;
  overflow: hidden;
  white-space: nowrap;
}

.c1:after,
input.c1:after {
  border-top: 1px solid #eee;
  content: '';
  display: table-cell;
  position: relative;
  top: 0.625em;
  width: 100%;
}

.c1:after,
input.c1:after {
  left: 1.5%;
}

.c1 .c2 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c6 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c7 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c8 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c9 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c10 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c11 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c12 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c13 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c14 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c15 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c2 {
  font-size: 1.5em;
}

.c18 .c2 {
  font-size: 1.5em;
}

.c19 .c2 {
  font-size: 1.5em;
}

.c20 .c2 {
  font-size: 1.5em;
}

.c21 .c2 {
  font-size: 1.5em;
}

.c22 .c2 {
  font-size: 1.5em;
}

.c23 .c2 {
  font-size: 1.5em;
}

.c24 .c2 {
  font-size: 1.5em;
}

.c25 .c2 {
  font-size: 1.5em;
}

.c26 .c2 {
  font-size: 1.5em;
}

.c27 .c2 {
  font-size: 1.5em;
}

.c28 .c2 {
  font-size: 1.5em;
}

.c29 .c2 {
  font-size: 1.5em;
}

.c30 .c2 {
  font-size: 1.5em;
}

.c31 .c2 {
  pointer-events: none;
}

<div
  className="c0"
>
  <h3
    className="c1"
    type="sub"
  >
    <span
      className="c2 c3"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
        />
      </svg>
    </span>
     
    Et qui praesentium sunt.
  </h3>
</div>
`;

exports[`Storyshots atoms|Heading section 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c1:first-child {
  margin-top: 0;
}

.c1:last-child {
  margin-bottom: 0;
}

.c1,
input.c1 {
  font-size: 1.5em;
  color: #00a8d8;
}

.c1 .c2 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

<div
  className="c0"
>
  <h2
    className="c1"
    type="section"
  >
    Fuga aut qui id.
  </h2>
</div>
`;

exports[`Storyshots atoms|Heading sub 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c1:first-child {
  margin-top: 0;
}

.c1:last-child {
  margin-bottom: 0;
}

.c1,
input.c1 {
  font-size: 0.8125em;
  text-transform: uppercase;
  color: #999;
  display: table;
  overflow: hidden;
  white-space: nowrap;
}

.c1:after,
input.c1:after {
  border-top: 1px solid #eee;
  content: '';
  display: table-cell;
  position: relative;
  top: 0.625em;
  width: 100%;
}

.c1:after,
input.c1:after {
  left: 1.5%;
}

.c1 .c2 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

<div
  className="c0"
>
  <h3
    className="c1"
    type="sub"
  >
    Beatae id sit soluta.
  </h3>
</div>
`;
